--- a/frontend/src/Style/Calculator.css
+++ b/frontend/src/Style/Calculator.css
@@ -18,7 +18,13 @@
 }
 button{
     font-size: 2rem;
-    width:100px;
-    height:100px;
-    border: 1px solid red;
+    font-weight: 500;
+    width:100%;
+    height:16vh;
+    cursor: pointer;
+    border: 1px solid rgb(163, 130, 130);
+}
+
+#calcont{
+    background-color: rgb(216, 217, 219);
 }
